Fixed Notes And Document Table alignment on the basis of resolution , right aligned total AR and OD on Action , Dispute , Entity Profile , Order Managemet Files modified - [ARAgentView,DisputeList,EntityProfile,NotesAndDocument,OrderDeskAgentView,OrderManagement,style.css]

--- a/src/main/webapp/themes/FI_Theme_Credit_Card/style.css
+++ b/src/main/webapp/themes/FI_Theme_Credit_Card/style.css
@@ -14749,3 +14749,18 @@ button.wm-app .close {
 .wm-app .btn.app-button.btn-default.dropdown-toggle {
     pointer-events: none;
 }
+
+
+/*currency field right aligned*/
+
+td.app-datagrid-cell.total_AR {
+    text-align: right !important;
+}
+
+td.app-datagrid-cell.total_OD {
+    text-align: right !important;
+}
+
+td.app-datagrid-cell.dispute_Amt {
+    text-align: right !important;
+}
